maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: not found: type any
	var sommeAngle:any = 0
                       ^